# deployfilegen

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
deployfilegen/: cli.py  exceptions.py
deployfilegen/analyzer/: detector.py
deployfilegen/config/: env_loader.py
deployfilegen/generators/: backend.py  compose.py  frontend.py  github.py
deployfilegen/utils/: logger.py  writer.py
tests/: test_cli.py  test_deploy_strategy.py  test_detector.py  test_stability_overrides.py
